syntax = "proto3";

package product;


service ProductService {

  rpc CreateProduct(CreateProductRequest) returns (ProductResponse) {}


  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse) {}


  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {}


  rpc GetProduct(GetProductRequest) returns (ProductResponse) {}

  rpc ListProducts(Empty) returns (ListProductsResponse) {}
}


message Empty {}

message ProductResponse {
  int32 id = 1;                   
  string name = 2;               
  float price = 3;               
  int32 stock = 4;                
  string description = 5;       
  CategoryResponse category = 6;  
}

message CreateProductRequest {
  string name = 1;              
  float price = 2;              
  int32 stock = 3;               
  string description = 4;        
  int32 categoryId = 5;         
}

message UpdateProductRequest {
  int32 id = 1;                   
  string name = 2;               
  float price = 3;               
  int32 stock = 4;            
  string description = 5;        
  int32 categoryId = 6;          
}

message DeleteProductRequest {
  int32 id = 1;                
}

message DeleteProductResponse {
  bool success = 1;               
  string message = 2;            
}

message GetProductRequest {
  int32 id = 1;                 
}

message ListProductsResponse {
  repeated ProductResponse products = 1; 
}

message CategoryResponse {
  int32 id = 1;                   
  string name = 2;              
}
